--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.6",
     "react-beautiful-dnd": "13.1.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "universal-cookie": "4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
